@@ -15,8 +15,8 @@ this repository contains the full copyright notices and license terms. -->
         <record model="ir.message" id="msg_open_period_closed_fiscalyear">
             <field name="text">You cannot reopen period "%(period)s" because its fiscal year "%(fiscalyear)s" is closed.</field>
         </record>
-        <record model="ir.message" id="msg_change_period_post_move_sequence">
-            <field name="text">You cannot change the post move sequence in period "%(period)s" because it has posted moves.</field>
+        <record model="ir.message" id="msg_change_period_move_sequence">
+            <field name="text">You cannot change the move sequence in period "%(period)s" because it has posted moves.</field>
         </record>
         <record model="ir.message" id="msg_close_period_non_posted_moves">
             <field name="text">To close period "%(period)s" you must post the moves "%(moves)s".</field>
@@ -24,8 +24,8 @@ this repository contains the full copyright notices and license terms. -->
         <record model="ir.message" id="msg_period_standard_overlap">
             <field name="text">The dates of standard period of the same fiscal year can not overlap.</field>
         </record>
-        <record model="ir.message" id="msg_period_post_move_sequence_unique">
-            <field name="text">A post move sequence can be reused only by periods in the same fiscal year.</field>
+        <record model="ir.message" id="msg_period_move_sequence_unique">
+            <field name="text">A move sequence can be reused only by periods in the same fiscal year.</field>
         </record>
         <record model="ir.message" id="msg_period_fiscalyear_dates">
             <field name="text">The dates for period "%(period)s" must be between the dates of its fiscal year "%(fiscalyear)s".</field>
@@ -54,8 +54,8 @@ this repository contains the full copyright notices and license terms. -->
             <field name="text">You cannot add/modify/delete tax lines in closed period "%(period)s".</field>
         </record>
 
-        <record model="ir.message" id="msg_change_fiscalyear_post_move_sequence">
-            <field name="text">You cannot change the post move sequence on fiscal year "%(fiscalyear)s" because it contains posted moves.</field>
+        <record model="ir.message" id="msg_change_fiscalyear_move_sequence">
+            <field name="text">You cannot change the move sequence on fiscal year "%(fiscalyear)s" because it contains posted moves.</field>
         </record>
         <record model="ir.message" id="msg_no_fiscalyear_date">
             <field name="text">To continue, you must create a fiscal year for the date "%(date)s" and company "%(company)s".</field>
@@ -69,8 +69,8 @@ this repository contains the full copyright notices and license terms. -->
         <record model="ir.message" id="msg_open_fiscalyear_earlier">
             <field name="text">Open fiscal years can not be before closed fiscal years.</field>
         </record>
-        <record model="ir.message" id="msg_fiscalyear_post_move_sequence_unique">
-            <field name="text">The post move sequence of fiscal years must be unique.</field>
+        <record model="ir.message" id="msg_fiscalyear_move_sequence_unique">
+            <field name="text">The move sequence of fiscal years must be unique.</field>
         </record>
         <record model="ir.message" id="msg_close_fiscalyear_account_balance_not_zero">
             <field name="text">To close the fiscal year, the balance of account "%(account)s" must be zero.</field>
