@@ -26,7 +26,7 @@ Create fiscal year::
 
 Set the sequence number::
 
-    >>> sequence = fiscalyear.post_move_sequence
+    >>> sequence = fiscalyear.move_sequence
     >>> sequence.number_next = 10
     >>> sequence.save()
 
@@ -38,7 +38,7 @@ Renew fiscalyear using the wizard::
     >>> new_fiscalyear, = renew_fiscalyear.actions[0]
     >>> len(new_fiscalyear.periods)
     12
-    >>> int(new_fiscalyear.post_move_sequence.number_next)
+    >>> int(new_fiscalyear.move_sequence.number_next)
     10
 
 Renew fiscalyear resetting sequences::
@@ -47,12 +47,12 @@ Renew fiscalyear resetting sequences::
     >>> renew_fiscalyear.form.reset_sequences = True
     >>> renew_fiscalyear.execute('create_')
     >>> new_fiscalyear, = renew_fiscalyear.actions[0]
-    >>> int(new_fiscalyear.post_move_sequence.number_next)
+    >>> int(new_fiscalyear.move_sequence.number_next)
     1
 
 Set the sequence name::
 
-    >>> sequence = new_fiscalyear.post_move_sequence
+    >>> sequence = new_fiscalyear.move_sequence
     >>> sequence.name = 'Sequence %s' % new_fiscalyear.name
     >>> sequence.save()
 
@@ -62,5 +62,5 @@ Renew fiscalyear and test sequence name is updated::
     >>> renew_fiscalyear.form.reset_sequences = True
     >>> renew_fiscalyear.execute('create_')
     >>> new_fiscalyear, = renew_fiscalyear.actions[0]
-    >>> assertEqual(new_fiscalyear.post_move_sequence.name,
+    >>> assertEqual(new_fiscalyear.move_sequence.name,
     ...     'Sequence %s' % new_fiscalyear.name)
