@@ -2,7 +2,7 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="//field[@name='post_move_sequence']" position="after">
+    <xpath expr="//field[@name='move_sequence']" position="after">
         <label name="es_sii_send_invoices"/>
         <field name="es_sii_send_invoices"/>
     </xpath>
