@@ -2,9 +2,7 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath
-        expr="/form/notebook/page[@id='sequences']/field[@name='post_move_sequence']"
-        position="after">
+    <xpath expr="/form/notebook/page[@id='sequences']/field[@name='move_sequence']" position="after">
         <field name="invoice_sequences" colspan="4" mode="form,tree"
             view_ids="account_invoice.invoice_sequence_view_form,account_invoice.invoice_sequence_view_list_sequence"/>
     </xpath>
