@@ -2,7 +2,7 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/field[@name='post_move_sequence']" position="after">
+    <xpath expr="/form/field[@name='move_sequence']" position="after">
         <field name="tax_group_on_cash_basis" colspan="4"/>
     </xpath>
 </data>
