@@ -1,3 +1,4 @@
+* Use strict sequence to number moves
 * Rename post number to number
 * Remove number on move and its sequence on journal
 
